@@ -1,1 +1,1 @@
-all (exp ([0, 1, -1, -1000]) - [1, e, 1/e, 0] < sqrt (eps))
+all (abs (exp ([0, 1, -1, -1000]) - [1, e, 1/e, 0]) < sqrt (eps))
