@@ -1,1 +1,1 @@
-cond ([1, 2; 2, 1]) - 3 < sqrt (eps)
+abs (cond ([1, 2; 2, 1]) - 3) < sqrt (eps)
