@@ -1,1 +1,1 @@
-all (eig ([1, 2; 2, 1]) - [-1; 3] < sqrt (eps))
+all (abs (eig ([1, 2; 2, 1]) - [-1; 3]) < sqrt (eps))
