@@ -1,1 +1,1 @@
-all (all (inv ([1, 2; 3, 4]) - [-2, 1; 1.5, -0.5] < sqrt (eps)))
+all (all (abs (inv ([1, 2; 3, 4]) - [-2, 1; 1.5, -0.5]) < sqrt (eps)))
