@@ -1,1 +1,1 @@
-all (svd ([eye(3), eye(3)]) - [rt2; rt2; rt2] < sqrt (eps))
+all (abs (svd ([eye(3), eye(3)]) - [rt2; rt2; rt2]) < sqrt (eps))
