@@ -1,3 +1,7 @@
+2000-06-08  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* sysdep.cc (Fkbhit): Also ask for input if forced_interactive.
+
 2000-06-07  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* Makefile.in (oct-gperf.h): Use $(GPERF) instead of gperf.
